findbugs: Method org.drools.guvnor.client.qa.VerifyRulesFiredWidget$1.onChange(ChangeEvent) invokes inefficient new Integer(int) constructor; use Integer.valueOf(int) instead